unpackaged/main/default/objects/Engagement__c/fields/Group_No__c.field-meta.xml
<CustomField>
    <fullName>Group_No__c</fullName>
    <formula>BLANKVALUE(X20_Group__r.Name, Proprietary_Group__r.Group_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group #</label>
    <type>Text</type>
</CustomField>