unpackaged/main/default/objects/Engagement__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <formula>IF(
NOT(ISBLANK( X20_Group__c )),
 X20_Group__r.Name,
IF(
NOT(ISBLANK( Proprietary_Group__c )),
 Proprietary_Group__r.Group_Number__c  ,
&quot;&quot;
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Number</label>
    <type>Text</type>
</CustomField>