unpackaged/main/default/objects/Engagement__c/fields/Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>Group_Owner__c</fullName>
    <formula>IF(ISBLANK(X20_Group__r.NCM_Proprietor__r.FirstName),Proprietary_Group__r.Group_Owner__r.FirstName &amp; &quot; &quot; &amp; Proprietary_Group__r.Group_Owner__r.LastName,X20_Group__r.NCM_Proprietor__r.FirstName &amp; &quot; &quot; &amp; 
X20_Group__r.NCM_Proprietor__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Owner</label>
    <type>Text</type>
</CustomField>