unpackaged/main/default/objects/Engagement__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <formula>Text(X20_Group__r.Group_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Type</label>
    <type>Text</type>
</CustomField>