unpackaged/main/default/objects/Engagement__c/fields/Guest_Speaker_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Guest_Speaker_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guest Speaker Attendance</label>
    <type>Checkbox</type>
</CustomField>