unpackaged/main/default/objects/Engagement__c/fields/Home_work__c.field-meta.xml
<CustomField>
    <fullName>Home_work__c</fullName>
    <label>Homework</label>
    <length>1500</length>
    <type>LongTextArea</type>
</CustomField>