unpackaged/main/default/objects/Engagement__c/fields/Homework__c.field-meta.xml
<CustomField>
    <fullName>Homework__c</fullName>
    <description>This will be merged into the Welcome Email template</description>
    <inlineHelpText>This will be merged into the Welcome Email template</inlineHelpText>
    <label>Homework</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>