unpackaged/main/default/objects/Engagement__c/fields/Hotel_1__c.field-meta.xml
<CustomField>
    <fullName>Hotel_1__c</fullName>
    <label>Hotel 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>