unpackaged/main/default/objects/Engagement__c/fields/Hotel_2__c.field-meta.xml
<CustomField>
    <fullName>Hotel_2__c</fullName>
    <label>Hotel 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>