unpackaged/main/default/objects/Engagement__c/fields/Hotel_3__c.field-meta.xml
<CustomField>
    <fullName>Hotel_3__c</fullName>
    <label>Hotel 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>