unpackaged/main/default/objects/Engagement__c/fields/Hotel_Cancellation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Cancellation_Fee__c</fullName>
    <label>Hotel Cancellation Clause</label>
    <type>TextArea</type>
</CustomField>