unpackaged/main/default/objects/Engagement__c/fields/Hotel_Commission_Received__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Commission_Received__c</fullName>
    <inlineHelpText>Date hotel commission check was received</inlineHelpText>
    <label>Commission Paid Date</label>
    <type>Date</type>
</CustomField>