unpackaged/main/default/objects/Engagement__c/fields/Hotel_Contract_Finalized__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Contract_Finalized__c</fullName>
    <label>Hotel Contract Finalized</label>
    <type>Date</type>
</CustomField>