unpackaged/main/default/objects/Engagement__c/fields/Hotel_General_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hotel_General_Notes__c</fullName>
    <label>Hotel General Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>