unpackaged/main/default/objects/Engagement__c/fields/Hotel_Master_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Master_Paid_Date__c</fullName>
    <description>Date the Hotel master is paid</description>
    <label>Hotel Master Paid Date</label>
    <type>Date</type>
</CustomField>