unpackaged/main/default/objects/Engagement__c/fields/Hotel_Selected_by_NCM__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Selected_by_NCM__c</fullName>
    <label>Hotel Selected by NCM</label>
    <type>Date</type>
</CustomField>