unpackaged/main/default/objects/Engagement__c/fields/Instructor_1__c.field-meta.xml
<CustomField>
    <fullName>Instructor_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>