unpackaged/main/default/objects/Engagement__c/fields/Instructor_2__c.field-meta.xml
<CustomField>
    <fullName>Instructor_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instructor 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Engagements1</relationshipName>
    <type>Lookup</type>
</CustomField>