unpackaged/main/default/objects/Engagement__c/fields/Is_Benchmarking__c.field-meta.xml
<CustomField>
    <fullName>Is_Benchmarking__c</fullName>
    <description>Indicates if meeting is for Benchmarking (Proprietary) group.</description>
    <formula>NOT(ISBLANK(Proprietary_Group__c))</formula>
    <inlineHelpText>Indicates if meeting is for Benchmarking (Proprietary) group.</inlineHelpText>
    <label>Is Benchmarking</label>
    <type>Checkbox</type>
</CustomField>