unpackaged/main/default/objects/Engagement__c/fields/Last_Attendee_Used__c.field-meta.xml
<CustomField>
    <fullName>Last_Attendee_Used__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Attendee # Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>