unpackaged/main/default/objects/Engagement__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>location</description>
    <label>Location</label>
    <length>80</length>
    <type>Text</type>
</CustomField>