unpackaged/main/default/objects/Engagement__c/fields/Location_Information__c.field-meta.xml
<CustomField>
    <fullName>Location_Information__c</fullName>
    <label>Location Notes</label>
    <type>TextArea</type>
</CustomField>