unpackaged/main/default/objects/Engagement__c/fields/Location_Times__c.field-meta.xml
<CustomField>
    <fullName>Location_Times__c</fullName>
    <inlineHelpText>This will be merged into the Confirmation Email Templates</inlineHelpText>
    <label>Location / Times</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>