unpackaged/main/default/objects/Engagement__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Dealership</fullName>
            </value>
            <value>
                <fullName>Mgmt. Company</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>NCM Home Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>