unpackaged/main/default/objects/Engagement__c/fields/Logistics_Intro_Email_FU_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Intro_Email_FU_1_Sent__c</fullName>
    <description>One week after initial email</description>
    <inlineHelpText>One week after initial email</inlineHelpText>
    <label>Logistics Intro Email - FU #1 Sent</label>
    <type>Date</type>
</CustomField>