unpackaged/main/default/objects/Engagement__c/fields/Logistics_Intro_Email_FU_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>Logistics_Intro_Email_FU_2_Sent__c</fullName>
    <label>Logistics Intro Email - FU #2 Sent</label>
    <type>Date</type>
</CustomField>