unpackaged/main/default/objects/Engagement__c/fields/Marketing_Tradeshow__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Tradeshow__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Tradeshow</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>