unpackaged/main/default/objects/Engagement__c/fields/Max_Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>Max_Room_Rate__c</fullName>
    <label>Max Room Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>