unpackaged/main/default/objects/Engagement__c/fields/Meeting_Code_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Code_Intranet__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Intranet Code (ID) for the Engagement - used to keep sync with Intranet Data</inlineHelpText>
    <label>Meeting Id (Intranet)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>