unpackaged/main/default/objects/Engagement__c/fields/Meeting_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Cycle__c</fullName>
    <label>Meeting Cycle</label>
    <length>20</length>
    <type>Text</type>
</CustomField>