unpackaged/main/default/objects/Engagement__c/fields/Meeting_Roster_Received__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Roster_Received__c</fullName>
    <description>Accounting selects the date once the Moderator provides the appropriate attendance for the engagement</description>
    <label>Meeting Roster Received</label>
    <type>Date</type>
</CustomField>