unpackaged/main/default/objects/Engagement__c/fields/Meeting_Survey_Sent__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Survey_Sent__c</fullName>
    <description>Returns TRUE if either the Survey Send Time OR the Meeting CSI Sent fields are before today.</description>
    <formula>OR(
 Survey_Send_Time__c &lt; NOW(),
 Meeting_CSI_Sent__c &lt; TODAY()
)</formula>
    <label>Meeting Survey Sent</label>
    <type>Checkbox</type>
</CustomField>