unpackaged/main/default/objects/Engagement__c/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>