unpackaged/main/default/objects/Engagement__c/fields/Meeting_URL_Code__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL_Code__c</fullName>
    <formula>IF(
    ISBLANK( Meeting_Code_Intranet__c ),
    &quot;Not Created&quot;,
    &quot;http://intranet/legacyhotelmeeting/meetingdata.aspx?id=&quot; &amp; Meeting_Code_Intranet__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting URL (Code)</label>
    <type>Text</type>
</CustomField>