unpackaged/main/default/objects/Engagement__c/fields/Misc_Fees__c.field-meta.xml
<CustomField>
    <fullName>Misc_Fees__c</fullName>
    <label>Misc. Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>