unpackaged/main/default/objects/Engagement__c/fields/Moderator_Fees__c.field-meta.xml
<CustomField>
    <fullName>Moderator_Fees__c</fullName>
    <label>Moderator Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>