unpackaged/main/default/objects/Engagement__c/fields/NCM_Arrival__c.field-meta.xml
<CustomField>
    <fullName>NCM_Arrival__c</fullName>
    <label>NCM Arrival</label>
    <type>Date</type>
</CustomField>