unpackaged/main/default/objects/Engagement__c/fields/NCM_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>NCM_Arrival_Time__c</fullName>
    <label>NCM Arrival Time</label>
    <type>Time</type>
</CustomField>