unpackaged/main/default/objects/Engagement__c/fields/NCM_Content_Adaptation__c.field-meta.xml
<CustomField>
    <fullName>NCM_Content_Adaptation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCM Content Adaptation</label>
    <referenceTo>NCM_Content_Version__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>