unpackaged/main/default/objects/Engagement__c/fields/NCM_Departure__c.field-meta.xml
<CustomField>
    <fullName>NCM_Departure__c</fullName>
    <label>NCM Departure</label>
    <type>Date</type>
</CustomField>