unpackaged/main/default/objects/Engagement__c/fields/NCM_Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>NCM_Departure_Time__c</fullName>
    <label>NCM Departure Time</label>
    <type>Time</type>
</CustomField>