unpackaged/main/default/objects/Engagement__c/fields/NCM_Exec_Attendance__c.field-meta.xml
<CustomField>
    <fullName>NCM_Exec_Attendance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NCM Exec. Attendance</label>
    <type>Checkbox</type>
</CustomField>