unpackaged/main/default/objects/Engagement__c/fields/No_Best_Idea_Session__c.field-meta.xml
<CustomField>
    <fullName>No_Best_Idea_Session__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Best Idea Session</label>
    <type>Checkbox</type>
</CustomField>