unpackaged/main/default/objects/Engagement__c/fields/No_Hotel_Contract_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Hotel_Contract_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A hotel contract is not required for this engagement</inlineHelpText>
    <label>No Hotel Contract Required</label>
    <type>Checkbox</type>
</CustomField>