unpackaged/main/default/objects/Engagement__c/fields/No_Prorate_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Prorate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A prorata invoice is not required for the attendees of this engagement. If not checked then a prorate for each member will be required for expense recovery.</inlineHelpText>
    <label>No Prorate Required</label>
    <type>Checkbox</type>
</CustomField>