unpackaged/main/default/objects/Engagement__c/fields/No_Reception__c.field-meta.xml
<CustomField>
    <fullName>No_Reception__c</fullName>
    <formula>OR(
    ISBLANK( Reception_Date__c ),
    NoReception__c 
)</formula>
    <label>No Reception?</label>
    <type>Checkbox</type>
</CustomField>