unpackaged/main/default/objects/Engagement__c/fields/NoReception__c.field-meta.xml
<CustomField>
    <fullName>NoReception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Reception</label>
    <type>Checkbox</type>
</CustomField>