unpackaged/main/default/objects/Engagement__c/fields/Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Notes_2__c</fullName>
    <label>Notes 2</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>