unpackaged/main/default/objects/Engagement__c/fields/Notes_3__c.field-meta.xml
<CustomField>
    <fullName>Notes_3__c</fullName>
    <label>Notes 3</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>