unpackaged/main/default/objects/Engagement__c/fields/Observer_attendee_count__c.field-meta.xml
<CustomField>
    <fullName>Observer_attendee_count__c</fullName>
    <description>Number of Observers listed as Engagement Attendees</description>
    <label>Observer attendee count</label>
    <summaryFilterItems>
        <field>Engagement_Attendee__c.Attendee_Type__c</field>
        <operation>equals</operation>
        <value>Observer</value>
    </summaryFilterItems>
    <summaryForeignKey>Engagement_Attendee__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>