unpackaged/main/default/objects/Engagement__c/fields/On_Hold_Reset__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reset__c</fullName>
    <label>On Hold Reset</label>
    <type>Date</type>
</CustomField>