unpackaged/main/default/objects/Engagement__c/fields/On_Hold_Seats__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Seats__c</fullName>
    <label>On Hold Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>