unpackaged/main/default/objects/Engagement__c/fields/One_Week_Check_Complete__c.field-meta.xml
<CustomField>
    <fullName>One_Week_Check_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Week Check- Complete</label>
    <type>Checkbox</type>
</CustomField>