unpackaged/main/default/objects/Engagement__c/fields/One_Week_Check_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>One_Week_Check_Start_Date__c</fullName>
    <label>One Week Check- Start Date</label>
    <type>Date</type>
</CustomField>