unpackaged/main/default/objects/Engagement__c/fields/Onsite_Offsite__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Offsite__c</fullName>
    <label>Onsite / Offsite</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>