unpackaged/main/default/objects/Engagement__c/fields/Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Created__c</fullName>
    <label>Opportunity Created</label>
    <type>Date</type>
</CustomField>