unpackaged/main/default/objects/Engagement__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <label>Notes 1</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>