unpackaged/main/default/objects/Engagement__c/fields/Overbook_Activated__c.field-meta.xml
<CustomField>
    <fullName>Overbook_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overbook Activated</label>
    <type>Checkbox</type>
</CustomField>