unpackaged/main/default/objects/Engagement__c/fields/Overbook_All_Used__c.field-meta.xml
<CustomField>
    <fullName>Overbook_All_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overbook All Used</label>
    <type>Checkbox</type>
</CustomField>