unpackaged/main/default/objects/Engagement__c/fields/Overbook_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Overbook_Remaining__c</fullName>
    <label>Overbook Remaining</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>