unpackaged/main/default/objects/Engagement__c/fields/Overbook_Seats__c.field-meta.xml
<CustomField>
    <fullName>Overbook_Seats__c</fullName>
    <label>Overbook Seats</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>