unpackaged/main/default/objects/Engagement__c/fields/Overbooked_Seats_Original_Count__c.field-meta.xml
<CustomField>
    <fullName>Overbooked_Seats_Original_Count__c</fullName>
    <label>Overbooked Seats (Original Count)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>