unpackaged/main/default/objects/Engagement__c/fields/Paid_Seats__c.field-meta.xml
<CustomField>
    <fullName>Paid_Seats__c</fullName>
    <label>Paid Seats</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>