unpackaged/main/default/objects/Engagement__c/fields/Printed_Product_Fees__c.field-meta.xml
<CustomField>
    <fullName>Printed_Product_Fees__c</fullName>
    <label>Estimated Printed Product Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>