unpackaged/main/default/objects/Engagement__c/fields/Product_Meeting_Pack_Notes__c.field-meta.xml
<CustomField>
    <fullName>Product_Meeting_Pack_Notes__c</fullName>
    <label>Product &amp; Meeting Pack Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>