unpackaged/main/default/objects/Engagement__c/fields/Prorate_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Invoiced__c</fullName>
    <label>Prorate Invoiced</label>
    <type>Date</type>
</CustomField>