unpackaged/main/default/objects/Engagement__c/fields/Prorate_Submitted_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Prorate_Submitted_to_Accounting__c</fullName>
    <label>Prorate Submitted to Accounting</label>
    <type>Date</type>
</CustomField>