unpackaged/main/default/objects/Engagement__c/fields/Reception_Date__c.field-meta.xml
<CustomField>
    <fullName>Reception_Date__c</fullName>
    <label>Reception Date</label>
    <type>DateTime</type>
</CustomField>