unpackaged/main/default/objects/Engagement__c/fields/Reception_Date_Code__c.field-meta.xml
<CustomField>
    <fullName>Reception_Date_Code__c</fullName>
    <formula>DATEVALUE( Reception_Date__c )</formula>
    <label>Reception Date (Code)</label>
    <type>Date</type>
</CustomField>