unpackaged/main/default/objects/Engagement__c/fields/Reception_Time_Code__c.field-meta.xml
<CustomField>
    <fullName>Reception_Time_Code__c</fullName>
    <formula>TIMEVALUE( Reception_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reception Time (Code)</label>
    <type>Time</type>
</CustomField>