unpackaged/main/default/objects/Engagement__c/fields/Record_Info_Code__c.field-meta.xml
<CustomField>
    <fullName>Record_Info_Code__c</fullName>
    <formula>Location__c + &quot; &quot; + text(Campus_Room__c)  + &quot; &quot; +  Descriptor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Info (Code)</label>
    <type>Text</type>
</CustomField>