unpackaged/main/default/objects/Engagement__c/fields/Registered__c.field-meta.xml
<CustomField>
    <fullName>Registered__c</fullName>
    <label>Registered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>