unpackaged/main/default/objects/Engagement__c/fields/Requires_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Requires_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Checklist?</label>
    <type>Checkbox</type>
</CustomField>