unpackaged/main/default/objects/Engagement__c/fields/Revenue_Actual_Pipline__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Actual_Pipline__c</fullName>
    <label>Revenue Actual - Pipline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>