unpackaged/main/default/objects/Engagement__c/fields/Revenue_Commissionable__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Commissionable__c</fullName>
    <label>Revenue - Commissionable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>