unpackaged/main/default/objects/Engagement__c/fields/Revenue_Forecasted__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Forecasted__c</fullName>
    <label>Revenue - Forecasted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>