unpackaged/main/default/objects/Engagement__c/fields/Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Potential__c</fullName>
    <label>Revenue - Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>