unpackaged/main/default/objects/Engagement__c/fields/Room_Block_Count__c.field-meta.xml
<CustomField>
    <fullName>Room_Block_Count__c</fullName>
    <description>The record count of all records listed on the Engagement Room Blocks.</description>
    <inlineHelpText>Count of related Room Blocks.</inlineHelpText>
    <label>Room Block Count</label>
    <summaryForeignKey>Engagement_Room_Block__c.Engagement_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>