unpackaged/main/default/objects/Engagement__c/fields/Room_Block_Cut_off__c.field-meta.xml
<CustomField>
    <fullName>Room_Block_Cut_off__c</fullName>
    <description>Deadline for room reservations to be secured by to get the group rate.</description>
    <inlineHelpText>Deadline for room reservations to be secured by to get the group rate.</inlineHelpText>
    <label>Hotel Cut-Off Date</label>
    <type>Date</type>
</CustomField>