unpackaged/main/default/objects/Engagement__c/fields/Room_Block_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Room_Block_Deadline__c</fullName>
    <description>Room Block Survey for a specific Engagement.</description>
    <label>Room Block Deadline</label>
    <type>Date</type>
</CustomField>