unpackaged/main/default/objects/Engagement__c/fields/Room_Block_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Room_Block_Hotel__c</fullName>
    <description>Room Block Survey for a specific Engagement.</description>
    <label>Room Block Hotel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>