unpackaged/main/default/objects/Engagement__c/fields/Rooms_From__c.field-meta.xml
<CustomField>
    <fullName>Rooms_From__c</fullName>
    <label>Room Nights From</label>
    <type>Date</type>
</CustomField>