unpackaged/main/default/objects/Engagement__c/fields/Rooms_To__c.field-meta.xml
<CustomField>
    <fullName>Rooms_To__c</fullName>
    <label>Room Nights To</label>
    <type>Date</type>
</CustomField>