unpackaged/main/default/objects/Engagement__c/fields/RS_Ops_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>RS_Ops_Follow_up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RS Ops Follow-up</label>
    <type>Checkbox</type>
</CustomField>