unpackaged/main/default/objects/Engagement__c/fields/RS_Ops_Notes__c.field-meta.xml
<CustomField>
    <fullName>RS_Ops_Notes__c</fullName>
    <label>RS Ops Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>