unpackaged/main/default/objects/Engagement__c/fields/Sales_Commission_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Sales_Commission_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Commission Exempt</label>
    <type>Checkbox</type>
</CustomField>