unpackaged/main/default/objects/Engagement__c/fields/Scheduling_Reason__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Reason__c</fullName>
    <label>Scheduling Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Request/Self-Generated</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
            <value>
                <fullName>Subject Matter Expert</fullName>
            </value>
            <value>
                <fullName>OEM Expert</fullName>
            </value>
            <value>
                <fullName>Schedule Availability</fullName>
            </value>
            <value>
                <fullName>Repeat Business, No Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>