unpackaged/main/default/objects/Engagement__c/fields/Scheduling_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Reason_Notes__c</fullName>
    <label>Scheduling Reason Notes</label>
    <type>TextArea</type>
</CustomField>