unpackaged/main/default/objects/Engagement__c/fields/Session_Name_Code__c.field-meta.xml
<CustomField>
    <fullName>Session_Name_Code__c</fullName>
    <description>Used for Workflow Rule to store original record name - will deprecate this to Process Builder Functionality that exists already for this object (20 Group Record Type)</description>
    <label>Session Name (Code)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>