unpackaged/main/default/objects/Engagement__c/fields/SessionlegacyID__c.field-meta.xml
<CustomField>
    <fullName>SessionlegacyID__c</fullName>
    <description>This is the 18 digit record ID for the sessions object that created this record</description>
    <inlineHelpText>This is the 18 digit record ID for the sessions object that created this record</inlineHelpText>
    <label>SessionlegacyID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>