unpackaged/main/default/objects/Engagement__c/fields/Shipping_cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_cost__c</fullName>
    <label>Shipping cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>